Add more details

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,8 @@
     <app-hero></app-hero>
     <app-gaming-activities></app-gaming-activities>
     <app-care-tips></app-care-tips>
+    <app-gallery></app-gallery>
+    <app-about></app-about>
   </main>
   <app-footer></app-footer>
   <router-outlet />
