--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,8 +5,10 @@
     </div>
     <ul class="nav-links" [class.active]="isMenuOpen">
       <li><a href="#home" (click)="toggleMenu()">Home</a></li>
-      <li><a href="#activities" (click)="toggleMenu()">Gaming Activities</a></li>
+      <li><a href="#activities" (click)="toggleMenu()">Activities</a></li>
       <li><a href="#care" (click)="toggleMenu()">Care Tips</a></li>
+      <li><a href="#gallery" (click)="toggleMenu()">Gallery</a></li>
+      <li><a href="#about" (click)="toggleMenu()">About</a></li>
       <li><a href="#contact" (click)="toggleMenu()">Contact</a></li>
     </ul>
     <button class="menu-toggle" (click)="toggleMenu()" aria-label="Toggle menu">
