--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -9,8 +9,10 @@
         <h4>Quick Links</h4>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#activities">Gaming Activities</a></li>
+          <li><a href="#activities">Activities</a></li>
           <li><a href="#care">Care Tips</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#about">About</a></li>
         </ul>
       </div>
       <div class="footer-section">
