--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="navbar container">
     <div class="logo">
-      <h2>🎮 KidsCare</h2>
+      <h2>🎮 Child Activities</h2>
     </div>
     <ul class="nav-links" [class.active]="isMenuOpen">
       <li><a href="#home" (click)="toggleMenu()">Home</a></li>
