--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; {{ currentYear }} KidsCare. All rights reserved. Made with ❤️ for children's digital wellness.</p>
+      <p>&copy; {{ currentYear }} Child Activities. All rights reserved. Made with ❤️ for children's digital wellness.</p>
     </div>
   </div>
 </footer>
